Fixed footer layout on mobile view

--- a/assets/sass/custom.scss
+++ b/assets/sass/custom.scss
@@ -2826,6 +2826,15 @@ input[type="submit"].tribe-button.submit {
   .elementor-199118 .elementor-element.elementor-element-b476fc9>.elementor-element-populated>.elementor-widget-wrap {
     padding: 20px!important;
   }
+  .elementor-201638 .elementor-element.elementor-element-336a6b34 > .elementor-element-populated {
+    margin: 0 0;
+  }
+  .elementor-201638 .elementor-element.elementor-element-2432747b > .elementor-element-populated {
+    margin: 0 0 30px;
+  }
+  .elementor-top-section.elementor-element-3195bacc {
+    margin-bottom: 30px;
+  }
 }
 @media screen and (max-width: 782px) {
   html #wpadminbar {
